--- a/package.json
+++ b/package.json
@@ -6,14 +6,24 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint ./ && vue-tsc --noEmit",
+    "lint:fix": "npm run lint --fix"
   },
   "dependencies": {
-    "vue": "^3.5.21"
+    "@mdi/font": "^7.4.47",
+    "pinia": "^3.0.3",
+    "vue": "^3.5.21",
+    "vuetify": "^3.10.4"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.45.0",
+    "@typescript-eslint/parser": "^8.45.0",
     "@vitejs/plugin-vue": "^6.0.1",
+    "@vue/eslint-config-typescript": "^14.6.0",
     "@vue/tsconfig": "^0.8.1",
+    "eslint": "^9.36.0",
+    "eslint-plugin-vue": "^10.5.0",
     "typescript": "~5.8.3",
     "vite": "^7.1.7",
     "vue-tsc": "^3.0.7"
