--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "pinia": "^3.0.3",
+    "uuid": "^13.0.0",
     "vue": "^3.5.21",
     "vuetify": "^3.10.4"
   },
